--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -28,6 +28,14 @@ jobs:
         run: npm ci
       - name: Build website
         run: npm run build
+      - name: upload a build artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: dist-files
+          path: |
+            dist
+            dist2/
+            package.json
 
   deploy:
     needs: build
