--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -28,15 +28,16 @@ jobs:
         run: npm ci
       - name: Build website
         run: npm run build
-      - name: upload a build artifact
+      - name: upload artifact
         uses: actions/upload-artifact@v4
         with:
           name: dist-files
-          path: |
-            dist
-            dist2/
-            package.json
-            package2.json
+          path: dist
+          # path: |
+          #   dist
+          #   dist2/
+          #   package.json
+          #   package2.json
 
   deploy:
     needs: build
