--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -28,7 +28,7 @@ jobs:
         run: npm ci
       - name: Build website
         run: npm run build
-      - name: upload artifact
+      - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
           name: dist-files
@@ -43,5 +43,13 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     steps:
+      - name: Download artifact
+        uses: actions/download-artifact@v4.3.0
+        with:
+          name: dist-files
+      - name: Current working directory
+        run: pwd
+      - name: List all files/folder
+        run: ls -a
       - name: Deploy
         run: echo "Deploying..."
