--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -15,7 +15,7 @@ jobs:
         uses: actions/cache@v4
         with:
           path: ~/.npm
-          key: deps-node-modules-${{ hashFiles("**/package-lock.json") }}
+          key: deps-node-modules-${{ hashFiles(**/package-lock.json) }}
       - name: Install dependencies
         run: npm ci
       - name: Lint code
@@ -35,7 +35,7 @@ jobs:
         uses: actions/cache@v4
         with:
           path: ~/.npm
-          key: deps-node-modules-${{ hashFiles("**/package-lock.json") }}
+          key: deps-node-modules-${{ hashFiles(**/package-lock.json) }}
       - name: Install dependencies
         run: npm ci
       - name: Build website
