--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -9,16 +9,28 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-      - name: Before get code - show 'pwd' and 'ls -a'
+      - name: Before get code
         run: |
           pwd
           ls -la
+          cd .. && pwd && ls -la
+          cd .. && pwd && ls -la
+          cd .. && pwd && ls -la
+          cd .. && pwd && ls -la
+          cd .. && pwd && ls -la
+          cd .. && pwd && ls -la
       - name: Get code
         uses: actions/checkout@v3
-      - name: After get code show pwd and ls -a
+      - name: After get code
         run: |
           pwd
           ls -la
+          cd .. && pwd && ls -la
+          cd .. && pwd && ls -la
+          cd .. && pwd && ls -la
+          cd .. && pwd && ls -la
+          cd .. && pwd && ls -la
+          cd .. && pwd && ls -la
       - name: Cache dependencies
         uses: actions/cache@v4
         with:
