--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -18,14 +18,12 @@ jobs:
           cd .. && pwd && ls -la
           cd .. && pwd && ls -la
           cd .. && pwd && ls -la
-          cd .. && pwd && ls -la
       - name: Get code
         uses: actions/checkout@v3
       - name: After get code
         run: |
           pwd
           ls -la
-          cd .. && pwd && ls -la
           cd .. && pwd && ls -la
           cd .. && pwd && ls -la
           cd .. && pwd && ls -la
@@ -38,6 +36,15 @@ jobs:
           key: deps-node-modules-${{ hashFiles('**/package-lock.json') }}
       - name: Install dependencies
         run: npm ci
+      - name: After install dependencies
+        run: |
+          pwd
+          ls -la
+          cd .. && pwd && ls -la
+          cd .. && pwd && ls -la
+          cd .. && pwd && ls -la
+          cd .. && pwd && ls -la
+          cd .. && pwd && ls -la
       - name: Lint code
         run: npm run lint
       - name: Test code
