--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -9,31 +9,13 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-      - name: Before get code
-        run: |
-          pwd
-          ls -la
-          cd .. && pwd && ls -la
-          cd .. && pwd && ls -la
-          cd .. && pwd && ls -la
-          cd .. && pwd && ls -la
-          cd .. && pwd && ls -la
       - name: Get code
         uses: actions/checkout@v3
-      - name: After get code
-        run: |
-          pwd
-          ls -la
-          cd .. && pwd && ls -la
-          cd .. && pwd && ls -la
-          cd .. && pwd && ls -la
-          cd .. && pwd && ls -la
-          cd .. && pwd && ls -la
       - name: Cache dependencies
         uses: actions/cache@v4
         with:
           path: ~/.npm
-          key: deps-node-modules-${{ hashFiles('package-lock.json') }}
+          key: deps-node-modules-${{ hashFiles('**/package-lock.json') }}
       - name: Install dependencies
         run: npm ci
       - name: Lint code
